fix: v8 banner overlapping page subheadings

--- a/src/style/markdown.less
+++ b/src/style/markdown.less
@@ -376,6 +376,9 @@
 		&:target {
 			padding-top: @header-and-banner-height;
 		}
+		content-region[name*='v8'] &:target {
+			padding-top: calc(@header-and-banner-height + 3.25rem);
+		}
 	}
 
 	* {
